--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GreenDaoDemo</string>
+    <string name="database_name">zb.db</string>
+    <string name="offline_dir_name">data</string>
+    <string name="database_dir_name">db</string>
 </resources>
